--- a/flextask.css
+++ b/flextask.css
@@ -3,15 +3,56 @@
   padding: 0;
   box-sizing: border-box;
 }
-.flex {
-  background-color: #00c7ce;
-  height: 50vh;
-  padding: 10px;
+header {
+  width: 100%;
+  padding: 30px 20px;
+  background-color: purple;
+  display: flex;
+  justify-content: flex-end;
+}
+header > div {
+  height: 70px;
+  margin: 0 10px;
+  flex-basis: 140px;
+  background-color: palevioletred;
+}
+header > :nth-child(1) {
+  margin-right: auto;
+}
+main {
+  display: flex;
+  justify-content: center;
+}
+.main-contents1 {
+  width: 300px;
+  background-color: yellowgreen;
+}
+.main-contents2 {
+  max-width: 700px;
+  padding: 20px;
+  flex-grow: 1;
+  background-color: green;
   display: flex;
   flex-wrap: wrap;
 }
-.flex > div {
-  background-color: #fff;
-  margin: 5px;
-  font-size: 30px;
+.main-contents2 > div {
+  flex-basis: 200px;
+  height: 130px;
+  margin: 10px;
+  background-color: yellow;
+}
+footer {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: blue;
+}
+footer > div {
+  max-width: 600px;
+  height: 40px;
+  flex-basis: 45%;
+  margin: 10px;
+  background-color: skyblue;
 }
